--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.0.1'
     compile 'io.reactivex:rxjava:1.0.15'
     compile 'io.reactivex:rxjava-math:1.0.0'
+    compile 'com.jakewharton:butterknife:8.1.0'
 }
