--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile 'io.reactivex:rxjava:1.0.15'
     compile 'io.reactivex:rxjava-math:1.0.0'
     compile 'com.jakewharton:butterknife:8.1.0'
+    compile 'me.himanshusoni.quantityview:quantity-view:1.2.0'
 }
