--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
 
-        // NOTE: Do not place your application dependencies here; they belong
+        // NOTE: Do not place your application dependencies here; they belongw
         // in the individual module build.gradle files
     }
 }
