--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
         <activity
-            android:name=".activity.DiningMethodFragment">
+            android:name=".activity.ChooseDiningMethod">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.PaymentMethodActivity" />
-        <activity android:name=".activity.ChooseMieBrandFragment" />
-        <activity android:name=".activity.ChooseMieFlavourFragment" />
-        <activity android:name=".activity.ChooseDrinkFragment" />
-        <activity android:name=".activity.ChoosePedasFragment" />
-        <activity android:name=".activity.ChooseToppingFragment" />
-        <activity android:name=".activity.OrderSummaryFragment" />
+        <activity android:name=".activity.ChoosePaymentMethod" />
+        <activity android:name=".activity.ChooseMieBrand" />
+        <activity android:name=".activity.ChooseMieFlavour" />
+        <activity android:name=".activity.ChooseDrink" />
+        <activity android:name=".activity.ChoosePedas" />
+        <activity android:name=".activity.ChooseTopping" />
+        <activity android:name=".activity.OrderSummary" />
     </application>
 
 </manifest>
