--- a/app-cashlez-sdk/build.gradle
+++ b/app-cashlez-sdk/build.gradle
@@ -2,11 +2,12 @@ apply plugin: 'com.android.application'
 
 repositories {
     jcenter()
+    google()
 }
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.3'
+    buildToolsVersion '26.0.2'
     defaultConfig {
         multiDexEnabled true
         applicationId "com.cashlez.android.garuda.library.cashlezlib"
